--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,16 @@ body {
   padding: 0;
 }
 
+@font-face {
+  font-family: Barlow;
+  src: url("/fonts/Barlow-Regular.otf");
+}
+
 * {
+  font-family: Barlow;
   box-sizing: border-box;
+}
+
+.gridjs-table {
+  width: 100% !important;
 }
