--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,11 @@ body {
 .gridjs-table {
   width: 100% !important;
 }
+
+.--basural {
+  border-radius: 50%;
+  border-top: 2px solid #701c75;
+  border-left: 2px solid #701c75;
+  border-right: 2px solid #2da9a3;
+  border-bottom: 2px solid #2da9a3;
+}
