--- a/src/index.css
+++ b/src/index.css
@@ -18,10 +18,18 @@ body {
   width: 100% !important;
 }
 
-.--basural {
-  border-radius: 50%;
+.icon {
   border-top: 2px solid #701c75;
   border-left: 2px solid #701c75;
   border-right: 2px solid #2da9a3;
   border-bottom: 2px solid #2da9a3;
+  border-radius: 50%;
+}
+
+.--basural {
+  border: 2px solid #f00;
+}
+
+.--camion {
+  border: 2px solid #0f0;
 }
